[package]
name = "yellow"
version = "0.1.0"
authors = ["Druue <tileyratkins@gmail.com> (https://twitter.com/tileyratkins)", "Halvard Mørstad (https://github.com/halvardssm)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
